force-app/main/default/objects/Contact/fields/wtn__LinkedInUrl__c.field-meta.xml
<CustomField>
    <fullName>wtn__LinkedInUrl__c</fullName>
    <label>Url LinkedIn</label>
    <type>Url</type>
</CustomField>