force-app/main/default/objects/Contact/fields/wtn__TwitterUrl__c.field-meta.xml
<CustomField>
    <fullName>wtn__TwitterUrl__c</fullName>
    <label>Url Twitter</label>
    <type>Url</type>
</CustomField>