force-app/main/default/objects/Contact/recordTypes/Client_Contact.recordType-meta.xml
<RecordType>
    <fullName>Client_Contact</fullName>
    <active>true</active>
    <description>Use this record type to track client countacts</description>
    <label>Client Contact</label>
</RecordType>