force-app/main/default/objects/Contact/recordTypes/Lawyers.recordType-meta.xml
<RecordType>
    <fullName>Lawyers</fullName>
    <active>true</active>
    <description>Use this record type to track lawyers</description>
    <label>Lawyers</label>
</RecordType>