force-app/main/default/objects/Contact/listViews/AllContacts_NoAccountType.listView-meta.xml
<ListView>
    <fullName>AllContacts_NoAccountType</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Related_Law_Firm__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Contact_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Contacts - No Account Type</label>
</ListView>