force-app/main/default/objects/Contact/listViews/AllContacts_wo_Account.listView-meta.xml
<ListView>
    <fullName>AllContacts_wo_Account</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Alternate_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>All Contacts w/o Account</label>
</ListView>