force-app/main/default/objects/Contact/listViews/ContactsProspectLists.listView-meta.xml
<ListView>
    <fullName>ContactsProspectLists</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Prospecting_List__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prospecting_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CONTACT.ADDRESS2_STATE</field>
        <operation>startsWith</operation>
        <value>a</value>
    </filters>
    <label>Contacts - Prospect Lists</label>
</ListView>