force-app/main/default/objects/Contact/listViews/Valerie_Ulian.listView-meta.xml
<ListView>
    <fullName>Valerie_Ulian</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Valerie Ulian</label>
</ListView>